Created Term Template

--- a/src/client/play.html
+++ b/src/client/play.html
@@ -51,5 +51,7 @@
         <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
         <script src="/scripts/CONFIG.js"></script>
         <script src="/scripts/play.js"></script>
+
+        <img id="term-TEMPLATE" src="" class="term hide">
     </body>
 </html>
