Finish play area and make leaderboard template

--- a/src/client/play.html
+++ b/src/client/play.html
@@ -45,6 +45,16 @@
                         <div id="score">Score: 0</div>
                     </div>
                 </div>
+
+                <div id="term-area">
+                </div>
+
+                <div id="leaderboard">
+                    <div id="leaderboard-header">
+                        <div>Name</div>
+                        <div>Score</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -53,5 +63,9 @@
         <script src="/scripts/play.js"></script>
 
         <img id="term-TEMPLATE" src="" class="term hide">
+        <div class="leaderboard-entry">
+            <div class="player-leaderboard-name">Name</div>
+            <div class="player-leaderboard-score">0</div>
+        </div>
     </body>
 </html>
