Added some filler text on leaderboard

--- a/src/client/play.html
+++ b/src/client/play.html
@@ -54,6 +54,9 @@
                         <div>Name</div>
                         <div>Score</div>
                     </div>
+                    <div id="leaderboard-filler">
+                        No one has scored yet
+                    </div>
                 </div>
             </div>
         </div>
