--- a/src/client/play.html
+++ b/src/client/play.html
@@ -65,7 +65,7 @@
         <script src="/scripts/CONFIG.js"></script>
         <script src="/scripts/play.js"></script>
 
-        <img id="term-TEMPLATE" src="" class="term hide">
+        <img src="" class="term hide" data-term-id="">
         <div class="leaderboard-entry">
             <div class="player-leaderboard-name">Name</div>
             <div class="player-leaderboard-score">0</div>
