Answer Result Modals

--- a/src/client/play.html
+++ b/src/client/play.html
@@ -46,8 +46,46 @@
                         <div id="score">Score: 0</div>
                     </div>
                 </div>
+                
 
-                <div id="term-area">
+                <div id="term-area-wrapper">
+                    <div id="correct-answer-result-modal">
+                        <h1>Correct!</h1>
+                        <div class="result-info">
+                            <div class="result-info-item">
+                                <h2>Word:</h2>
+                                <p id="correct-answer-result-word" class="answer-result-word"></p>
+                            </div>
+
+                            <div class="result-info-item">
+                                <h2>Correct Image:</h2>
+                                <img id="correct-answer-result-image" class="answer-result-image" src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="incorrect-answer-result-modal">
+                        <h1>Incorrect :(</h1>
+                        <div class="result-info">
+                            <div class="result-info-item">
+                                <h2>Word:</h2>
+                                <p id="incorrect-answer-result-word" class="answer-result-word"></p>
+                            </div>
+
+                            <div class="result-info-item">
+                                <h2>Correct Image:</h2>
+                                <img id="incorrect-answer-result-image" class="answer-result-image" src="" alt="">
+                            </div>
+
+                            <div class="result-info-item">
+                                <h2>You Picked:</h2>
+                                <img id="picked-answer-result-image" class="answer-result-image" src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="term-area">
+                    </div>
                 </div>
 
                 <div id="leaderboard">
