--- a/src/client/play.html
+++ b/src/client/play.html
@@ -49,7 +49,7 @@
                 
 
                 <div id="term-area-wrapper">
-                    <div id="correct-answer-result-modal">
+                    <div id="correct-answer-result-modal" class="answer-result-modal">
                         <h1>Correct!</h1>
                         <div class="result-info">
                             <div class="result-info-item">
@@ -64,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div id="incorrect-answer-result-modal">
+                    <div id="incorrect-answer-result-modal" class="answer-result-modal">
                         <h1>Incorrect :(</h1>
                         <div class="result-info">
                             <div class="result-info-item">
