--- a/src/client/play.html
+++ b/src/client/play.html
@@ -84,6 +84,21 @@
                         </div>
                     </div>
 
+                    <div id="blank-answer-result-modal" class="answer-result-modal">
+                        <h1>You didn't answer in time</h1>
+                        <div class="result-info">
+                            <div class="result-info-item">
+                                <h2>Word:</h2>
+                                <p id="blank-answer-result-word" class="answer-result-word"></p>
+                            </div>
+
+                            <div class="result-info-item">
+                                <h2>Correct Image:</h2>
+                                <img id="blank-answer-result-image" class="answer-result-image" src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+
                     <div id="term-area">
                     </div>
                 </div>
